--- a/public/trees/Barenbaum.html
+++ b/public/trees/Barenbaum.html
@@ -186,8 +186,8 @@
                          { "id": "27", "name": "Martin Myers", "gender": "M", "spouse_ids": ["28","29"], "parent_ids": ["7","8"], "children_ids": ["32","34"], "birth_year": null, "death_year": null },
                             { "id": "28", "name": "Nancy Myers", "gender": "F", "spouse_ids": ["27"], "parent_ids": [], "children_ids": ["31","33"], "birth_year": null, "death_year": null },
                               { "id": "29", "name": "Patty Beltran", "gender": "F", "spouse_ids": ["27"], "parent_ids": [], "children_ids": [], "birth_year": null, "death_year": null },
-                         { "id": "30", "name": "Karen Myers", "gender": "F", "spouse_ids": ["31"], "parent_ids": ["7","8"], "children_ids": [], "birth_year": null, "death_year": null },
-                         { "id": "31", "name": "Bob Yukich", "gender": "M", "spouse_ids": ["30"], "parent_ids": [], "children_ids": [], "birth_year": null, "death_year": null },
+                         { "id": "30", "name": "Karen Myers", "gender": "F", "spouse_ids": ["31"], "parent_ids": ["7","8"], "children_ids": ["39"], "birth_year": null, "death_year": null },
+                         { "id": "31", "name": "Bob Yukich", "gender": "M", "spouse_ids": ["30"], "parent_ids": [], "children_ids": ["39"], "birth_year": null, "death_year": null },
             //-Forth Generation- Molly Myers-//
                          { "id": "32", "name": "Carla Myers", "gender": "F", "spouse_ids": [], "parent_ids": ["27","28"], "children_ids": ["33"], "birth_year": null, "death_year": null },
                              { "id": "33", "name": "Peter Myers", "gender": "M", "spouse_ids": [], "parent_ids": ["32"], "children_ids": [], "birth_year": null, "death_year": null },
@@ -196,6 +196,11 @@
                           { "id": "36", "name": "Sam Frader Thompson", "gender": "M", "spouse_ids": [], "parent_ids": ["34","35"], "children_ids": [], "birth_year": null, "death_year": null },
                                  { "id": "37", "name": "Scott Labby", "gender": "M", "spouse_ids": [], "parent_ids": ["34","37"], "children_ids": ["38"], "birth_year": null, "death_year": null },
                                       { "id": "38", "name": "Maren Labby", "gender": "F", "spouse_ids": [], "parent_ids": ["34","37"], "children_ids": [], "birth_year": null, "death_year": null },
+                                         { "id": "39", "name": "Aaron Yukich", "gender": "M", "spouse_ids": [], "parent_ids": ["30","31"], "children_ids": [], "birth_year": null, "death_year": null },
+            //-Third Generation-Moshe Yosef Bromberg-//
+    
+            //-Second Generation-Galler Family-//
+
 
             
 
