--- a/public/trees/Barenbaum.html
+++ b/public/trees/Barenbaum.html
@@ -166,8 +166,8 @@
               { "id": "6", "name": "Shmuel Bromberg", "gender": "M", "spouse_ids": ["5"], "parent_ids": [], "children_ids": ["7","9","11","12","13"], "birth_year": "c. 1880", "death_year": null },
              { "id": "7", "name": "Molly Bromberg", "gender": "F", "spouse_ids": ["8"], "parent_ids": ["5","6"], "children_ids": ["27","30"], "birth_year": "1912", "death_year": null },
             { "id": "8", "name": "Hymie Myers", "gender": "M", "spouse_ids": ["7"], "parent_ids": [], "children_ids": ["27","30"], "birth_year": "1907", "death_year": null },
-             { "id": "9", "name": "Moshe Bromberg", "gender": "M", "spouse_ids": ["10"], "parent_ids": ["5","6"], "children_ids": [], "birth_year": "1913", "death_year": null },
-             { "id": "10", "name": "Rachel Weinberger", "gender": "F", "spouse_ids": ["9"], "parent_ids": [], "children_ids": [], "birth_year": "1923", "death_year": null },
+             { "id": "9", "name": "Moshe Bromberg", "gender": "M", "spouse_ids": ["10"], "parent_ids": ["5","6"], "children_ids": ["40"], "birth_year": "1913", "death_year": null },
+             { "id": "10", "name": "Rachel Weinberger", "gender": "F", "spouse_ids": ["9"], "parent_ids": [], "children_ids": ["40"], "birth_year": "1923", "death_year": null },
              { "id": "11", "name": "David Bromberg", "gender": "M", "spouse_ids": [], "parent_ids": ["5","6"], "children_ids": [], "birth_year": "1918", "death_year": null },
               { "id": "12", "name": "Rachel Bromberg", "gender": "F", "spouse_ids": [], "parent_ids": ["5","6"], "children_ids": [], "birth_year": "1920", "death_year": null },
              { "id": "13", "name": "Abba Bromberg", "gender": "M", "spouse_ids": [], "parent_ids": ["5","6"], "children_ids": [], "birth_year": "1922", "death_year": null },
@@ -198,6 +198,15 @@
                                       { "id": "38", "name": "Maren Labby", "gender": "F", "spouse_ids": [], "parent_ids": ["34","37"], "children_ids": [], "birth_year": null, "death_year": null },
                                          { "id": "39", "name": "Aaron Yukich", "gender": "M", "spouse_ids": [], "parent_ids": ["30","31"], "children_ids": [], "birth_year": null, "death_year": null },
             //-Third Generation-Moshe Yosef Bromberg-//
+                         { "id": "40", "name": "Rivka Bromberg", "gender": "F", "spouse_ids": ["41"], "parent_ids": ["9","10"], "children_ids": [], "birth_year": null, "death_year": null },
+                         { "id": "41", "name": "Nissim Pilosof", "gender": "M", "spouse_ids": ["40"], "parent_ids": [], "children_ids": [], "birth_year": null, "death_year": null },
+                         { "id": "42", "name": "Shai Pilosof", "gender": "M", "spouse_ids": [], "parent_ids": ["41","40"], "children_ids": [], "birth_year": "1913", "death_year": null },
+                         { "id": "9", "name": "Oren Pilosof", "gender": "M", "spouse_ids": [], "parent_ids": ["41","40"], "children_ids": [], "birth_year": "1913", "death_year": null },
+
+
+
+            
+
     
             //-Second Generation-Galler Family-//
 
