--- a/public/trees/Barenbaum.html
+++ b/public/trees/Barenbaum.html
@@ -201,7 +201,7 @@
                          { "id": "40", "name": "Rivka Bromberg", "gender": "F", "spouse_ids": ["41"], "parent_ids": ["9","10"], "children_ids": ["42","47","50"], "birth_year": null, "death_year": null },
                          { "id": "41", "name": "Nissim Pilosof", "gender": "M", "spouse_ids": ["40"], "parent_ids": [], "children_ids": ["42","47","50"], "birth_year": null, "death_year": null },
                          { "id": "42", "name": "Shai Pilosof", "gender": "M", "spouse_ids": ["43"], "parent_ids": ["41","40"], "children_ids": ["44","45","46"], "birth_year": null, "death_year": null },
-                          { "id": "43", "name": "Unkown", "gender": "F", "spouse_ids": ["42"], "parent_ids": [], "children_ids": ["44","45","46"], "birth_year": null", "death_year": null },
+                          { "id": "43", "name": "Unkown", "gender": "F", "spouse_ids": ["42"], "parent_ids": [], "children_ids": ["44","45","46"], "birth_year": null, "death_year": null },
                             { "id": "44", "name": "Gal Pilosof", "gender": "M", "spouse_ids": [], "parent_ids": ["42","43"], "children_ids": [], "birth_year": null, "death_year": null },
                          { "id": "45", "name": "Ofek Pilosof", "gender": "F", "spouse_ids": [], "parent_ids": ["42","43"], "children_ids": [], "birth_year": null, "death_year": null },
                          { "id": "46", "name": "Agam Pilosof", "gender": "F", "spouse_ids": [], "parent_ids": ["42","43"], "children_ids": [], "birth_year": null, "death_year": null },
