--- a/public/biographies.html
+++ b/public/biographies.html
@@ -439,7 +439,7 @@
                 },
                 model: 'gemini-2.5-flash-preview-tts'
             };
-            const apiKey = "";
+            const apiKey = "AIzaSyChprH3TPmiusqJEpxxpOE4xtpjxJa-qt4";
             const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-tts:generateContent?key=${apiKey}`;
 
             try {
@@ -512,7 +512,7 @@
                 }
             };
 
-            const apiKey = "";
+            const apiKey = "AIzaSyChprH3TPmiusqJEpxxpOE4xtpjxJa-qt4";
             const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent?key=${apiKey}`;
 
             try {
