--- a/public/biographies.html
+++ b/public/biographies.html
@@ -381,7 +381,7 @@
 
             const chatHistory = [{ role: "user", parts: [{ text: prompt }] }];
             const payload = { contents: chatHistory };
-            const apiKey = "";
+            const apiKey = "AIzaSyChprH3TPmiusqJEpxxpOE4xtpjxJa-qt4";
             const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent?key=${apiKey}`;
 
             try {
