--- a/public/index.html
+++ b/public/index.html
@@ -134,7 +134,7 @@
 
         <section class="hero-image">
             <!-- FIX: Replaced broken image link with a placeholder -->
-            <img src="our-family-tree.onrender.com/family-hero.png" alt="תמונת משפחה" class="w-full h-auto rounded-3xl shadow-xl transition-transform duration-500 hover:scale-[1.01]" />
+            <img src="/assets/family-hero.png" alt="תמונת משפחה" class="w-full h-auto rounded-3xl shadow-xl transition-transform duration-500 hover:scale-[1.01]" />
         </section>
     </main>
 
