--- a/public/familychat.html
+++ b/public/familychat.html
@@ -22,7 +22,7 @@
     <script type="module">
         // Import Firebase modules for use in the script below
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-app.js";
-        import { getAuth, signInWithCustomToken, signInAnonymously, signOut, onAuthStateChanged, createUserWithEmailAndPassword, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
+        import { getAuth, signInWithCustomToken, signOut, onAuthStateChanged, createUserWithEmailAndPassword, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
         import { getFirestore, doc, onSnapshot, collection, query, orderBy, addDoc, serverTimestamp, setDoc, updateDoc, deleteDoc, getDoc } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
         
         // Expose Firebase modules to the global scope for the React script
@@ -30,7 +30,6 @@
             initializeApp,
             getAuth,
             signInWithCustomToken,
-            signInAnonymously,
             signOut,
             onAuthStateChanged,
             createUserWithEmailAndPassword,
@@ -46,7 +45,8 @@
             setDoc,
             updateDoc,
             deleteDoc,
-            getDoc
+            getDoc,
+            getDocs      
         };
     </script>
 </head>
@@ -1166,45 +1166,6 @@
         const container = document.getElementById('root');
         const root = ReactDOM.createRoot(container);
         root.render(React.createElement(App));
-        
-// 1️⃣ קבל רשימת UID של משתמשים רשומים
-async function getRegisteredUsersUIDs() {
-  const usersCol = collection(db, "users"); // collection בשם users
-  const usersSnapshot = await getDocs(usersCol);
-  const uids = usersSnapshot.docs.map(doc => doc.id); // UID = document ID
-  return uids;
-}
-
-// 2️⃣ טען את רשימת המשתמשים בצ'אט וסנן
-async function loadChatUsers() {
-  const registeredUIDs = await getRegisteredUsersUIDs();
-
-  const chatCol = collection(db, "chatUsers");
-  const chatSnapshot = await getDocs(chatCol);
-  const filteredUsers = {};
-
-  chatSnapshot.forEach(doc => {
-    if (registeredUIDs.includes(doc.id)) {
-      filteredUsers[doc.id] = doc.data();
-    }
-  });
-
-  displayUsers(filteredUsers);
-}
-
-// 3️⃣ הצגת המשתמשים בצ'אט
-function displayUsers(users) {
-  const usersList = document.getElementById('usersList');
-  usersList.innerHTML = '';
-  for (const uid in users) {
-    const li = document.createElement('li');
-    li.textContent = users[uid].name || uid;
-    usersList.appendChild(li);
-  }
-}
-
-// קריאה ראשונית
-loadChatUsers();
     </script>
 </body>
 </html>
