--- a/public/familychat.html
+++ b/public/familychat.html
@@ -82,6 +82,9 @@
             const app = initializeApp(firebaseConfig);
             const db = getFirestore(app);
             const auth = getAuth(app);
+            
+            window.db = db;
+window.auth = auth;
         
             // State management
             const [user, setUser] = useState(null);
