--- a/public/familychat.html
+++ b/public/familychat.html
@@ -60,7 +60,7 @@
             
             // Access Firebase modules from the global scope
             const {
-                initializeApp, getAuth, signInWithCustomToken, signInAnonymously, signOut, onAuthStateChanged,
+                initializeApp, getAuth, signInWithCustomToken, signOut, onAuthStateChanged,
                 createUserWithEmailAndPassword, signInWithEmailAndPassword, getFirestore, doc, onSnapshot, collection, query,
                 orderBy, addDoc, serverTimestamp, setDoc, updateDoc, deleteDoc, getDoc
             } = window.firebase;
