--- a/public/familychat.html
+++ b/public/familychat.html
@@ -1172,85 +1172,58 @@ window.auth = auth;
         
 
 
-<script type="text/babel">
-const { collection, getDocs, doc } = window.firebaseModular;
+<script type="module">
+    const { collection, getDocs, doc } = window.firebaseModular;
 
-// ---------------------------------------------------------
-// 1️⃣ שליפת כל המשתמשים הרשומים
-// ---------------------------------------------------------
-async function getRegisteredUsersUIDs() {
-    try {
-        const snapshot = await getDocs(collection(window.db, "users"));
-        const uids = snapshot.docs.map(d => ({ uid: d.id, ...d.data() }));
-        return uids;
-    } catch (err) {
-        console.error("Error fetching registered users:", err);
-        return [];
-    }
-}
-
-// ---------------------------------------------------------
-// 2️⃣ טעינת משתמשים בצ'אט וסינון הרשומים בלבד
-// ---------------------------------------------------------
-async function loadChatUsers() {
-    const list = document.getElementById("usersList");
-    if (!list) return;
-
-    list.innerHTML = "<p>Loading users...</p>";
-
-    const registeredUsers = await getRegisteredUsersUIDs();
-
-    if (!registeredUsers.length) {
-        list.innerHTML = "<p>No registered users found.</p>";
-        return;
+    async function getRegisteredUsersUIDs() {
+        try {
+            const snapshot = await getDocs(collection(window.db, "users"));
+            const uids = snapshot.docs.map(d => ({ uid: d.id, ...d.data() }));
+            return uids;
+        } catch (err) {
+            console.error("Error fetching registered users:", err);
+            return [];
+        }
     }
 
-    const chatUsersSnapshot = await getDocs(collection(window.db, "chatUsers"));
-    const filteredUsers = {};
+    async function loadChatUsers() {
+        const list = document.getElementById("usersList");
+        if (!list) return;
 
-    chatUsersSnapshot.forEach(docSnap => {
-        const match = registeredUsers.find(u => u.uid === docSnap.id);
-        if (match) filteredUsers[docSnap.id] = docSnap.data();
+        const registeredUsers = await getRegisteredUsersUIDs();
+
+        const chatUsersSnapshot = await getDocs(collection(window.db, "chatUsers"));
+        const filteredUsers = {};
+
+        chatUsersSnapshot.forEach(docSnap => {
+            const match = registeredUsers.find(u => u.uid === docSnap.id);
+            if (match) filteredUsers[docSnap.id] = docSnap.data();
+        });
+
+        displayUsers(filteredUsers);
+    }
+
+    function displayUsers(users) {
+        const usersList = document.getElementById("usersList");
+        usersList.innerHTML = "";
+
+        Object.entries(users).forEach(([uid, data]) => {
+            const li = document.createElement("li");
+            li.innerHTML = `<strong>${data.name || "Unnamed User"}</strong><br><small>${uid}</small>`;
+            li.onclick = () => openChatWith(uid);
+            usersList.appendChild(li);
+        });
+    }
+
+    function openChatWith(uid) {
+        console.log("Opening chat with:", uid);
+        const header = document.getElementById("chat-header");
+        if (header) header.textContent = `Chat with ${uid}`;
+    }
+
+    document.addEventListener("DOMContentLoaded", () => {
+        loadChatUsers();
     });
-
-    displayUsers(filteredUsers);
-}
-
-// ---------------------------------------------------------
-// 3️⃣ הצגת המשתמשים
-// ---------------------------------------------------------
-function displayUsers(users) {
-    const usersList = document.getElementById("usersList");
-    usersList.innerHTML = "";
-
-    Object.entries(users).forEach(([uid, data]) => {
-        const li = document.createElement("li");
-        li.innerHTML = `
-            <strong>${data.name || "Unnamed User"}</strong><br>
-            <small>${uid}</small>
-        `;
-        li.onclick = () => openChatWith(uid);
-        usersList.appendChild(li);
-    });
-}
-
-// ---------------------------------------------------------
-// 4️⃣ פתיחת צ'אט (placeholder, ניתן להרחיב)
-// ---------------------------------------------------------
-function openChatWith(uid) {
-    console.log("Opening chat with:", uid);
-    const header = document.getElementById("chat-header");
-    if (header) header.textContent = `Chat with ${uid}`;
-    // כאן אפשר להוסיף טעינת הודעות וכו'
-}
-
-// ---------------------------------------------------------
-// 5️⃣ אתחול אחרי טעינת הדף
-// ---------------------------------------------------------
-document.addEventListener("DOMContentLoaded", () => {
-    loadChatUsers();
-});
-
 </script>
     </script>
 </body>
