--- a/public/familychat.html
+++ b/public/familychat.html
@@ -53,7 +53,7 @@
 <body class="bg-gray-100 text-gray-800 dark:bg-gray-900 dark:text-gray-200">
     <div id="root"></div>
 
-    <script type="text/babel">
+      <script type="module">
         // The main React component for the chat application
         const App = () => {
             const { useState, useEffect, useRef } = React;
