--- a/public/familychat.html
+++ b/public/familychat.html
@@ -859,73 +859,107 @@ window.auth = auth;
   );
 };
 
-            if (loading && !isAuthReady) {
-                return (
-                    <div className="flex justify-center items-center h-screen">
-                        <div className="text-xl font-bold">{t.loading}</div>
-                    </div>
-                );
-            }
-        
-            if (!user) {
-                return (
-                    <div dir={isRTL ? "rtl" : "ltr"} className="flex flex-col items-center justify-center h-screen bg-gradient-to-br from-purple-400 via-pink-500 to-red-500 transition-all duration-500">
-                        <div className="w-full max-w-sm bg-white/50 backdrop-blur-xl rounded-3xl shadow-2xl p-8 dark:bg-gray-800/50 transition-all duration-300 transform hover:scale-105">
-                            <h1 className="text-5xl font-extrabold text-center mb-6 text-gray-900 dark:text-white transition-colors duration-300">
-                                {isLoginMode ? t.login : t.signup}
-                            </h1>
-                            <form onSubmit={isLoginMode ? handleLogin : handleSignup} className="space-y-6">
-                                <input
-                                    type="email"
-                                    value={email}
-                                    onChange={(e) => setEmail(e.target.value)}
-                                    placeholder={t.email}
-                                    className="w-full px-5 py-3 rounded-2xl bg-white/70 text-gray-800 border-2 border-transparent focus:outline-none focus:ring-4 focus:ring-purple-500 focus:border-purple-500 transition-all duration-300 dark:bg-gray-700/70 dark:text-gray-200"
-                                    required
-                                />
-                                <input
-                                    type="password"
-                                    value={password}
-                                    onChange={(e) => setPassword(e.target.value)}
-                                    placeholder={t.password}
-                                    className="w-full px-5 py-3 rounded-2xl bg-white/70 text-gray-800 border-2 border-transparent focus:outline-none focus:ring-4 focus:ring-purple-500 focus:border-purple-500 transition-all duration-300 dark:bg-gray-700/70 dark:text-gray-200"
-                                    required
-                                />
-                                {!isLoginMode && (
-                                    <input
-                                        type="text"
-                                        value={username}
-                                        onChange={(e) => setUsername(e.target.value)}
-                                        placeholder={t.username}
-                                        className="w-full px-5 py-3 rounded-2xl bg-white/70 text-gray-800 border-2 border-transparent focus:outline-none focus:ring-4 focus:ring-purple-500 focus:border-purple-500 transition-all duration-300 dark:bg-gray-700/70 dark:text-gray-200"
-                                        required
-                                    />
-                                )}
-                                <button
-                                    type="submit"
-                                    className="w-full px-6 py-4 rounded-full bg-gradient-to-r from-blue-500 to-purple-700 text-white font-bold text-lg shadow-lg hover:shadow-xl transform hover:scale-105 transition-all duration-300"
-                                >
-                                    {isLoginMode ? t.login : t.signup}
-                                </button>
-                            </form>
-                            <div className="mt-6 text-center">
-                                <p className="text-sm">
-                                    {isLoginMode ? t.or : t.or}
-                                    <button onClick={() => setIsLoginMode(!isLoginMode)} className="ml-2 text-purple-700 hover:underline">
-                                        {isLoginMode ? t.toggleSignup : t.toggleLogin}
-                                    </button>
-                                </p>
-                            </div>
-                            {statusMessage && (
-                                <div className="mt-6 p-4 rounded-xl text-center bg-white/70 text-gray-800 shadow-sm dark:bg-gray-700/70 dark:text-gray-200">
-                                    {statusMessage}
-                                </div>
-                            )}
-                        </div>
-                    </div>
-                );
-            }
-        
+       if (loading && !isAuthReady) {
+    return React.createElement(
+        "div",
+        { className: "flex justify-center items-center h-screen" },
+        React.createElement("div", { className: "text-xl font-bold" }, t.loading)
+    );
+}
+
+if (!user) {
+    return React.createElement(
+        "div",
+        { 
+            dir: isRTL ? "rtl" : "ltr",
+            className:
+                "flex flex-col items-center justify-center h-screen bg-gradient-to-br from-purple-400 via-pink-500 to-red-500 transition-all duration-500"
+        },
+        React.createElement(
+            "div",
+            {
+                className:
+                    "w-full max-w-sm bg-white/50 backdrop-blur-xl rounded-3xl shadow-2xl p-8 dark:bg-gray-800/50 transition-all duration-300 transform hover:scale-105"
+            },
+            React.createElement(
+                "h1",
+                {
+                    className:
+                        "text-5xl font-extrabold text-center mb-6 text-gray-900 dark:text-white transition-colors duration-300"
+                },
+                isLoginMode ? t.login : t.signup
+            ),
+            React.createElement(
+                "form",
+                { onSubmit: isLoginMode ? handleLogin : handleSignup, className: "space-y-6" },
+                React.createElement("input", {
+                    type: "email",
+                    value: email,
+                    onChange: (e) => setEmail(e.target.value),
+                    placeholder: t.email,
+                    className:
+                        "w-full px-5 py-3 rounded-2xl bg-white/70 text-gray-800 border-2 border-transparent focus:outline-none focus:ring-4 focus:ring-purple-500 focus:border-purple-500 transition-all duration-300 dark:bg-gray-700/70 dark:text-gray-200",
+                    required: true
+                }),
+                React.createElement("input", {
+                    type: "password",
+                    value: password,
+                    onChange: (e) => setPassword(e.target.value),
+                    placeholder: t.password,
+                    className:
+                        "w-full px-5 py-3 rounded-2xl bg-white/70 text-gray-800 border-2 border-transparent focus:outline-none focus:ring-4 focus:ring-purple-500 focus:border-purple-500 transition-all duration-300 dark:bg-gray-700/70 dark:text-gray-200",
+                    required: true
+                }),
+                !isLoginMode &&
+                    React.createElement("input", {
+                        type: "text",
+                        value: username,
+                        onChange: (e) => setUsername(e.target.value),
+                        placeholder: t.username,
+                        className:
+                            "w-full px-5 py-3 rounded-2xl bg-white/70 text-gray-800 border-2 border-transparent focus:outline-none focus:ring-4 focus:ring-purple-500 focus:border-purple-500 transition-all duration-300 dark:bg-gray-700/70 dark:text-gray-200",
+                        required: true
+                    }),
+                React.createElement(
+                    "button",
+                    {
+                        type: "submit",
+                        className:
+                            "w-full px-6 py-4 rounded-full bg-gradient-to-r from-blue-500 to-purple-700 text-white font-bold text-lg shadow-lg hover:shadow-xl transform hover:scale-105 transition-all duration-300"
+                    },
+                    isLoginMode ? t.login : t.signup
+                )
+            ),
+            React.createElement(
+                "div",
+                { className: "mt-6 text-center" },
+                React.createElement(
+                    "p",
+                    { className: "text-sm" },
+                    isLoginMode ? t.or : t.or,
+                    React.createElement(
+                        "button",
+                        {
+                            onClick: () => setIsLoginMode(!isLoginMode),
+                            className: "ml-2 text-purple-700 hover:underline"
+                        },
+                        isLoginMode ? t.toggleSignup : t.toggleLogin
+                    )
+                )
+            ),
+            statusMessage &&
+                React.createElement(
+                    "div",
+                    {
+                        className:
+                            "mt-6 p-4 rounded-xl text-center bg-white/70 text-gray-800 shadow-sm dark:bg-gray-700/70 dark:text-gray-200"
+                    },
+                    statusMessage
+                )
+        )
+    );
+}
+
             return (
                 <div dir={isRTL ? "rtl" : "ltr"} className="flex flex-col h-screen font-sans antialiased">
                     <div className="flex justify-end p-4 space-x-2 space-x-reverse">
