Update title and header for Behr family tree

--- a/public/trees/Behr.html
+++ b/public/trees/Behr.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Family Tree: Descendants of Izaks (Multi-Spouse)</title>
+    <title>Family Tree: Descendants of Behr/de Vries (Multi-Spouse)</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body {
@@ -132,7 +132,7 @@
 </head>
 <body class="bg-gray-50 p-4 md:p-8">
     <header class="text-center mb-8">
-        <h1 class="text-3xl md:text-4xl font-extrabold text-gray-800">🌳 Izaks Family Tree</h1>
+        <h1 class="text-3xl md:text-4xl font-extrabold text-gray-800">🌳 Behr Family Tree</h1>
         <p class="text-lg text-gray-600 mt-2">Introducing multiple generations with support for multiple spouses.</p>
         <p class="text-sm text-green-700 mt-2 font-bold">The tree is updated to October 2025- 7/5785</p>
     </header>
