Update birth and death years for several individuals

--- a/public/trees/Barenbaum.html
+++ b/public/trees/Barenbaum.html
@@ -191,10 +191,10 @@
             { id: '270', name: 'Jacob Sims', gender: 'M', birth_year: null, death_year: null, children_ids: ['260', '292'] },
             // Child 2: Eva Galler
             { id: '261', name: 'Eva Galler', gender: 'F', birth_year: 1904, death_year: 1997, children_ids: ['262'], spouse_ids: ['271'] },
-            { id: '271', name: 'Samuel Treiger', gender: 'M', birth_year: 1927, death_year: null, children_ids: ['262'] },
+            { id: '271', name: 'Samuel Treiger', gender: 'M', birth_year: 1902 , death_year: 1990, children_ids: ['262'] },
             // Child 3: Steve Galler (no children)
             { id: '264', name: 'Steve Galler', gender: 'M', birth_year: 1905, death_year: 1982, spouse_ids: ['272', '273'] },
-            { id: '272', name: 'Sadie Levin', gender: 'F', birth_year: null, death_year: null },
+            { id: '272', name: 'Sadie Levin', gender: 'F', birth_year: 1908, death_year: 1995 },
             { id: '273', name: 'First Wife ?', gender: 'F', birth_year: null, death_year: null },
             // Child 4: Sausi Galler (no children)
             { id: '265', name: 'Sausi Galler', gender: 'U', birth_year: null, death_year: null, spouse_ids: ['274', '275'] },
@@ -234,7 +234,7 @@
             // --- GEN 4 (Children of Minnie Galler & Jacob Sims) ---
             // Child 1: Bernice Marlene Sims
             { id: '260', name: 'Bernice Marlene Sims', gender: 'F', birth_year: 1919, death_year: 1995, children_ids: ['333', '337'], spouse_ids: ['332'] },
-            { id: '332', name: 'Morris Brown', gender: 'M', birth_year: null, death_year: null, children_ids: ['333', '337'] },
+            { id: '332', name: 'Morris Brown', gender: 'M', birth_year: 1920, death_year: 2004, children_ids: ['333', '337'] },
             // Child 2: Rae Sims
             { id: '292', name: 'Rae Sims', gender: 'F', birth_year: 1927, death_year: 1984 },
 
@@ -267,7 +267,7 @@
             // --- GEN 5 (Children of Karen Myers & Bob Yukich) ---
             // Child 1: Aaron Yukich
             { id: '243', name: 'Aaron Yukich', gender: 'M', birth_year: 1981, death_year: 'Alive', children_ids: [], spouse_ids: ['244'] },
-            { id: '244', name: 'Ana ?', gender: 'F', birth_year: null, death_year: null },
+            { id: '244', name: 'Ana', gender: 'F', birth_year: null, death_year: null },
 
             // --- GEN 5 (Children of Rivka Bromberg & Nissim Pilosof) ---
             // Child 1: Noah Pilosof
@@ -304,7 +304,7 @@
             { id: '321_spouse', name: 'Yanai Ben Abou', gender: 'M', birth_year: 2007, death_year: null, children_ids: ['328', '329', '382', '383'] },
             // Child 3: Amitai Bromberg
             { id: '330', name: 'Amitai Bromberg', gender: 'M', birth_year: 1988, death_year: 'Alive', children_ids: ['331', '384', '385'], spouse_ids: ['386'] },
-            { id: '386', name: 'Noga Amran', gender: 'F', birth_year: 2016, death_year: null, children_ids: ['331', '384', '385'] },
+            { id: '386', name: 'Noga Amran', gender: 'F', birth_year: 1989, death_year: null, children_ids: ['331', '384', '385'] },
 
             // --- GEN 5 (Children of Bernice Marlene Sims & Morris Brown) ---
             // Child 1: Alan Brown
@@ -434,17 +434,17 @@
             // --- GEN 6 (Children of Alan Brown & Jacqueline Sue Levine) ---
             // Child 1: Sheryl Rachel Brown
             { id: '334', name: 'Sheryl Rachel Brown', gender: 'F', birth_year: 1967, death_year: 'Alive', children_ids: ['401', '403', '405'], spouse_ids: ['402'] },
-            { id: '402', name: 'Mark Seef', gender: 'M', birth_year: 1994, death_year: null, children_ids: ['401', '403', '405'] },
+            { id: '402', name: 'Mark Seef', gender: 'M', birth_year: 1965, death_year: null, children_ids: ['401', '403', '405'] },
             // Child 2: Deborah Beth Brown
             { id: '335', name: 'Deborah Beth Brown', gender: 'F', birth_year: 1968, death_year: 'Alive' },
             // Child 3: Janice Lynne Brown
             { id: '336', name: 'Janice Lynne Brown', gender: 'F', birth_year: 1972, death_year: 'Alive', children_ids: ['406', '407', '408', '409'], spouse_ids: ['410'] },
-            { id: '410', name: 'Barry Jonathan Gork', gender: 'M', birth_year: 1998, death_year: null, children_ids: ['406', '407', '408', '409'] },
+            { id: '410', name: 'Barry Jonathan Gork', gender: 'M', birth_year: 1964, death_year: null, children_ids: ['406', '407', '408', '409'] },
 
             // --- GEN 6 (Children of Adrienne Brown & Joseph Breen) ---
             // Child 1: Michael Breen
             { id: '338', name: 'Michael Breen', gender: 'M', birth_year: 1985, death_year: 'Alive', children_ids: ['411', '412'], spouse_ids: ['413'] },
-            { id: '413', name: 'Miranda Blaine Borkan', gender: 'F', birth_year: 2018, death_year: null, children_ids: ['411', '412'] },
+            { id: '413', name: 'Miranda Blaine Borkan', gender: 'F', birth_year: 1992, death_year: null, children_ids: ['411', '412'] },
             // Child 2: Scott Breen
             { id: '339', name: 'Scott Breen', gender: 'M', birth_year: 1988, death_year: 'Alive', children_ids: [], spouse_ids: ['414'] },
             { id: '414', name: 'Shannon Fineran', gender: 'F', birth_year: 2024, death_year: null },
@@ -465,28 +465,28 @@
             // --- GEN 7 (Children of Sheryl Rachel Brown & Mark Seef) ---
             // Child 1: Abigail Seef
             { id: '401', name: 'Abigail Seef', gender: 'F', birth_year: 1996, death_year: 'Alive', children_ids: ['415'], spouse_ids: ['416'] },
-            { id: '416', name: 'Grant Greenberg', gender: 'M', birth_year: 2022, death_year: null, children_ids: ['415'] },
+            { id: '416', name: 'Grant Greenberg', gender: 'M', birth_year: 1996, death_year: null, children_ids: ['415'] },
             // Child 2: Joshua Seef
             { id: '403', name: 'Joshua Seef', gender: 'M', birth_year: 1999, death_year: 'Alive', children_ids: [], spouse_ids: ['404'] },
-            { id: '404', name: 'Ally Rae', gender: 'F', birth_year: 2021, death_year: null },
+            { id: '404', name: 'Ally Rosenbaum', gender: 'F', birth_year: 2021, death_year: null },
             // Child 3: David Seef
-            { id: '405', name: 'David Seef', gender: 'M', birth_year: 2001, death_year: 'Alive' },
+            { id: '405', name: 'Carly Seef', gender: 'F', birth_year: 2005, death_year: 'Alive' },
 
             // --- GEN 7 (Children of Janice Lynne Brown & Barry Jonathan Gork) ---
             // Child 1-4: Nathan, Mia, Ethan, Jacob
-            { id: '406', name: 'Nathan Gork', gender: 'M', birth_year: 2000, death_year: 'Alive' },
-            { id: '407', name: 'Mia Gork', gender: 'F', birth_year: 2002, death_year: 'Alive' },
-            { id: '408', name: 'Ethan Gork', gender: 'M', birth_year: 2005, death_year: 'Alive' },
-            { id: '409', name: 'Jacob Gork', gender: 'M', birth_year: 2008, death_year: 'Alive' },
+            { id: '406', name: 'Olivia Gork', gender: 'F', birth_year: 2002, death_year: 'Alive' },
+            { id: '407', name: 'Mallory Gork', gender: 'F', birth_year: 2004, death_year: 'Alive' },
+            { id: '408', name: 'Avery Gork', gender: 'M', birth_year: 2006, death_year: 'Alive' },
+            { id: '409', name: 'Tyler Gork', gender: 'M', birth_year: 2009, death_year: 'Alive' },
 
             // --- GEN 7 (Children of Michael Breen & Miranda Blaine Borkan) ---
             // Child 1-2: Emma, Charlie
-            { id: '411', name: 'Emma Breen', gender: 'F', birth_year: 2020, death_year: 'Alive' },
-            { id: '412', name: 'Charlie Breen', gender: 'U', birth_year: 2022, death_year: 'Alive' },
+            { id: '411', name: 'Charlotte Breen', gender: 'F', birth_year: 2020, death_year: 'Alive' },
+            { id: '412', name: 'Eloise Breen', gender: 'F', birth_year: 2022, death_year: 'Alive' },
 
             // --- GEN 8 (Children of Abigail Seef & Grant Greenberg) ---
             // Child 1: Elara Greenberg
-            { id: '415', name: 'Elara Greenberg', gender: 'F', birth_year: 2024, death_year: 'Alive' }
+            { id: '415', name: 'Reece Greenberg', gender: 'M', birth_year: 2023, death_year: 'Alive' }
         ];
 
      // Create a map for quick lookup
