--- a/public/trees/Barenbaum.html
+++ b/public/trees/Barenbaum.html
@@ -351,9 +351,9 @@
 
             // --- GEN 6 (Children of Shai Pilosof) ---
             // Child 1-3: Ofek, Gal, Agam
-            { id: '299', name: 'Ofek Pilosof', gender: 'U', birth_year: null, death_year: 'Alive' },
-            { id: '300', name: 'Gal Pilosof', gender: 'U', birth_year: null, death_year: 'Alive' },
-            { id: '301', name: 'Agam Pilosof', gender: 'U', birth_year: null, death_year: 'Alive' },
+            { id: '299', name: 'Ofek Pilosof', gender: 'F', birth_year: null, death_year: 'Alive' },
+            { id: '300', name: 'Gal Pilosof', gender: 'M', birth_year: null, death_year: 'Alive' },
+            { id: '301', name: 'Agam Pilosof', gender: 'F', birth_year: null, death_year: 'Alive' },
 
             // --- GEN 6 (Children of Eran Junger) ---
             // Child 1-5: Moshe Eitan, Ayala, Naomi, Talya, Levi Yitzhak
@@ -389,7 +389,7 @@
             // --- GEN 6 (Children of Michal Junger & Natti Ben Moshe) ---
             // Child 1: Yonatan Ben Moshe
             { id: '366', name: 'Yonatan Ben Moshe', gender: 'M', birth_year: null, death_year: 'Alive', children_ids: [], spouse_ids: ['399'] },
-            { id: '399', name: 'Malchut ?', gender: 'F', birth_year: null, death_year: null },
+            { id: '399', name: 'Malchut', gender: 'F', birth_year: null, death_year: null },
             // Child 2: Inon Ben Moshe
             { id: '367', name: 'Inon Ben Moshe', gender: 'M', birth_year: null, death_year: 'Alive' },
             // Child 3: Malchut Ben Moshe
@@ -447,7 +447,7 @@
             { id: '413', name: 'Miranda Blaine Borkan', gender: 'F', birth_year: 1992, death_year: null, children_ids: ['411', '412'] },
             // Child 2: Scott Breen
             { id: '339', name: 'Scott Breen', gender: 'M', birth_year: 1988, death_year: 'Alive', children_ids: [], spouse_ids: ['414'] },
-            { id: '414', name: 'Shannon Fineran', gender: 'F', birth_year: 2024, death_year: null },
+            { id: '414', name: 'Shannon Fineran', gender: 'F', birth_year: null, death_year: null },
 
             // --- GEN 6 (Children of Stefan Wolf Arnold & Stacey Lynn Richman) ---
             // Child 1-2: Lex, Asher
@@ -468,7 +468,7 @@
             { id: '416', name: 'Grant Greenberg', gender: 'M', birth_year: 1996, death_year: null, children_ids: ['415'] },
             // Child 2: Joshua Seef
             { id: '403', name: 'Joshua Seef', gender: 'M', birth_year: 1999, death_year: 'Alive', children_ids: [], spouse_ids: ['404'] },
-            { id: '404', name: 'Ally Rosenbaum', gender: 'F', birth_year: 2021, death_year: null },
+            { id: '404', name: 'Ally Rosenbaum', gender: 'F', birth_year: null, death_year: null },
             // Child 3: David Seef
             { id: '405', name: 'Carly Seef', gender: 'F', birth_year: 2005, death_year: 'Alive' },
 
@@ -476,7 +476,7 @@
             // Child 1-4: Nathan, Mia, Ethan, Jacob
             { id: '406', name: 'Olivia Gork', gender: 'F', birth_year: 2002, death_year: 'Alive' },
             { id: '407', name: 'Mallory Gork', gender: 'F', birth_year: 2004, death_year: 'Alive' },
-            { id: '408', name: 'Avery Gork', gender: 'M', birth_year: 2006, death_year: 'Alive' },
+            { id: '408', name: 'Avery Gork', gender: 'F', birth_year: 2006, death_year: 'Alive' },
             { id: '409', name: 'Tyler Gork', gender: 'M', birth_year: 2009, death_year: 'Alive' },
 
             // --- GEN 7 (Children of Michael Breen & Miranda Blaine Borkan) ---
