--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
         window.kommunicate = m; m._globals = kommunicateSettings;
     })(document, window.kommunicate || {});
     </script> -->
- <script>
+ <!---<script>--//
   window.addEventListener('mouseover', initLandbot, { once: true });
   window.addEventListener('touchstart', initLandbot, { once: true });
   var myLandbot;
@@ -53,9 +53,8 @@
       var x = document.getElementsByTagName('script')[0];
       x.parentNode.insertBefore(s, x);
     }
-  }
-</script>
-    //end of chat codes//
+  }-//
+</script>---!>
 </head>
 <body class="bg-gray-50 text-gray-800">
     <!-- Hero Section with Gradient -->
